array.island.Island.scala.error
Compilation error:
Island:8: error: ')' expected but '}' found.
  }
  ^Island:13: error: Unmatched closing brace '}' ignored here
}
^