array.island.Island.scala.code
var nmb : Int = 0
def island(num:Array[Int]): Int = {
  for (a <- 1 to (num.length-1)
    if (num(a-1)<num(a)){
      nmb = nmb+1
    }
  }
  return nmb
  
}